--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -27,23 +27,28 @@ body {
 
 .header {
   font-family: monospace;
-  padding: 20px 20px 0px 20px;
+  padding: 0px 20px 0px 20px;
+  margin: 0px 0px;
   font-weight: bold;
-  text-shadow: 2px 2px 2px $main-light-blue;
-  font-size: 5em;
+  text-shadow: 3px 3px 3px $main-light-blue;
+  font-size: 6em;
+  border: 0px;
 }
 
 .subheader {
   font-family: monospace;
-  padding: 20px 20px 0px 20px;
+  padding: 0px 20px 0px 20px;
+  margin-top: 0px;
+  margin-bottom: 3rem;
   font-weight: bold;
   text-shadow: 2px 2px 2px $main-light-blue;
   font-size: 2em;
+  border: 0px;
 }
 
 .header_smaller {
   font-family: monospace;
-  padding: 20px 20px 0px 20px;
+  padding: 20px 20px 20px 20px;
   font-weight: bold;
   text-shadow: 2px 2px 2px $main-light-blue;
   font-size: 3em;
@@ -51,8 +56,35 @@ body {
 
 .subtitle {
   color: #000000;
-  text-align: justify;
-  padding: 0em 5em 0em 5em;
+  text-align: center;
+  padding: 0em 0em 0em 0em;
+  font-size: 1.2em;
+}
+
+.theater-tile {
+  box-shadow: 8px 7px 0px 1px $main-red;
+  border-width: 2px;
+  margin: 2rem;
+  border-color: black;
+  border-radius: 20px;
+  font-family: monospace;
+}
+
+.theater-tile_header {
+  font-weight: bold;
+  font-family: monospace;
+}
+
+.theater-tile_body {
+  margin: 0px;
+  color: rgb(84, 84, 84);
+  font-size: 1.3em;
+}
+
+.tagline {
+  font-style: italic;
+  font-weight: bold;
+  color: #000000;
 }
 
 .right-arrow {
@@ -95,6 +127,7 @@ body {
   align-items: center;
   overflow: hidden;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .image {
