added theater details page with banner, theater info, and teams list

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -87,6 +87,13 @@ body {
   color: #000000;
 }
 
+.message-no-teams {
+  text-align: center;
+  color: rgb(84, 84, 84);
+  font-style: italic;
+  font-size: .8em;
+}
+
 .right-arrow {
   position: absolute;
   top: 50%;
