added ShowsList to TheaterDetailsPage

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -87,7 +87,7 @@ body {
   color: #000000;
 }
 
-.message-no-teams {
+.message-no-entries {
   text-align: center;
   color: rgb(84, 84, 84);
   font-style: italic;
