--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -91,6 +91,16 @@ body {
   border: 0px;
 }
 
+.theater-details-header-smaller {
+  font-family: monospace;
+  padding: 0px 20px 0px 20px;
+  margin: 0px 0px;
+  font-weight: bold;
+  text-shadow: 3px 3px 3px $main-light-blue;
+  font-size: 3em;
+  border: 0px;
+}
+
 .theater-details-location {
   font-family: monospace;
 }
@@ -106,6 +116,7 @@ body {
   text-align: center;
   padding: 0em 0em 0em 0em;
   font-size: 1.4em;
+  font-family: monospace;
 }
 
 .tagline {
